--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -9,6 +9,8 @@
     align-items: center;
     position: fixed;
     backdrop-filter: blur(5px);
+
+    z-index: 1000;
    
 }
 
@@ -21,7 +23,7 @@
 
 .logo-conteiner span {
     font: 800 clamp(1.5rem, 3vw, 3rem) sans-serif;
-    color: var(--color-icon-media) ;
+    color: var(--color-black);
 }
 
 .logo {
@@ -33,6 +35,10 @@
 .social-media {
     display: flex;
     gap: 20px;
+}
+
+.social-media a:hover {
+    transform: scale(1.3);
 }
 
 .cover-conteiner {
@@ -59,12 +65,12 @@
 
     width: 50%;
     padding: 0 0 0 5%;
-    color: white;
+    color: var(--color-white);
     backdrop-filter: blur(1px);
 }
 
 .cover-text h1 {
-    font-size: var(--font-site-h);
+    font-size: clamp(1.5rem, 4vw, 4rem);
 
 }
 
