--- a/assets/css/event.css
+++ b/assets/css/event.css
@@ -21,18 +21,29 @@
     object-fit: fill;
 }
 
+.img-principal {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+}
+
 .event-text {
     width: 70%;
     display: flex;
     justify-content: space-around;
     align-items: center;
     position: absolute;
-    color: white;
+    color: var(--color-white);
     font-size: clamp(2rem, 3vw, 5rem);
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; 
+}
+
+.event-text i:hover {
+    transform: scale(1.3);
+    cursor: pointer;
 }
 
 .event-slide-ball {
-    position: absolute;
+    position: relative;
     bottom: 50px;
 }
