--- a/assets/css/info.css
+++ b/assets/css/info.css
@@ -1,4 +1,5 @@
 .info {
+    scroll-snap-align: center;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -12,7 +13,7 @@
     width: 50%;
     display: flex;
     flex-flow: column wrap;
-    font-size: clamp(1rem, .5vw, 4rem);
+    font-size: clamp(1rem, 1vw, 4rem);
     font-weight: 400;
 }
 
@@ -30,4 +31,5 @@
     width: 100%;
     border-radius: 20px;
     box-shadow: 10px 10px 10px black;
+    
 }
