--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -7,8 +7,9 @@
 html {
     scroll-behavior: smooth;
     scrollbar-width: none;
-    font-family: "Roboto", sans-serif;
-    font-weight: 300;
+    scroll-snap-type: y proximity;
+    font-family: var(--font-title);
+    font-weight: 400;
     font-style: normal;
 }
 
