--- a/assets/css/var.css
+++ b/assets/css/var.css
@@ -1,8 +1,11 @@
 :root {
-    --color-blue-dark: #04045a;
-    --color-icon-media: #0d0d0d;
-    --font-size-p: clamp(1.5rem, 1vw, 4rem);
-    --font-site-h: clamp(2.5rem, 2.5vw, 6rem);
+    --color-blue: #274380;
+    --color-black: #1D1D1B;
+    --color-yellow: #FFD700;
+    --color-white: #EDEDED;
+    --font-title: "Bebas Neue", sans-serif;
+    --font-bold: 400;
+    --fonte-p: "Sora", sans-serif;
 
 }
 
@@ -14,13 +17,25 @@
 }
 
 .bg-white {
-    background-color: white;
+    background-color: var(--color-white);
 }
 
 .bg-dark {
-    background-attachment: var(--color-blue-dark);
+    background-attachment: var(--color-blue);
 }
 
 .hidden {
     display: none;
 }
+
+/* FONTE DOS TITULOS */
+.bebas-neue-regular { 
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+p {
+    font-family: var(--fonte-p);
+}
+
