--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -2,15 +2,16 @@
     max-width: 100vw;
     width: 100vw;
 
-    padding: 10px;
+    padding: 10px 50px;
 
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: fixed;
-    backdrop-filter: blur(5px);
+    background-color: var(--color-blue);
 
     z-index: 1000;
+
    
 }
 
@@ -19,22 +20,19 @@
     justify-content: center;
     align-items: center;
     gap: 20px;
-}
-
-.logo-conteiner span {
-    font: 800 clamp(1.5rem, 3vw, 3rem) sans-serif;
-    color: var(--color-black);
+    padding-left: 5vw;
 }
 
 .logo {
-    width: auto;
-    height: 60px;
+    width: 15vw;
+    min-width: 10rem;
     object-fit: cover;
 }
 
 .social-media {
     display: flex;
     gap: 20px;
+    color: var(--color-white);
 }
 
 .social-media a:hover {
@@ -42,9 +40,11 @@
 }
 
 .cover-conteiner {
-    background-image: url("/assets/img/fundo-capa.jpg");
+    background-image: linear-gradient(90deg, rgba(29,29,27,1) 0%, rgba(29,29,27,0.335171568627451) 30%, rgba(29,29,27,0.1110819327731093) 45%, rgba(29,29,27,0) 60%, rgba(29,29,27,0) 100%),
+    url('/assets/img/fundo-cover.jpeg');
     background-position: center;
     background-size: cover;
+
     height: 100vh;
     width: 100vw;
     z-index: -10;
@@ -67,10 +67,15 @@
     padding: 0 0 0 5%;
     color: var(--color-white);
     backdrop-filter: blur(1px);
+
+
 }
 
 .cover-text h1 {
     font-size: clamp(1.5rem, 4vw, 4rem);
+    color: var(--color-blue);
+    font-weight: normal;
+
 
 }
 
