--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -9,8 +9,7 @@ html {
     scrollbar-width: none;
     scroll-snap-type: y proximity;
     font-family: var(--font-title);
-    font-weight: 400;
-    font-style: normal;
+    font-weight: normal;
 }
 
 
