--- a/assets/css/var.css
+++ b/assets/css/var.css
@@ -11,9 +11,8 @@
 
 .area-site {
     width: 100vw;
-    max-height: 100vh;
     min-height: 100vh;
-    padding-top: 100px;
+    padding-top: 5vw;
 }
 
 .bg-white {
@@ -21,11 +20,11 @@
 }
 
 .bg-dark {
-    background-attachment: var(--color-blue);
+    background-color: var(--color-blue);
 }
 
 .hidden {
-    display: none;
+    visibility: hidden;
 }
 
 /* FONTE DOS TITULOS */
