Add page gallery

--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -6,7 +6,7 @@
 
 html {
     scroll-behavior: smooth;
-    scrollbar-width: none;
+    scrollbar-width: thin;
     scroll-snap-type: y proximity;
     font-family: var(--font-title);
     font-weight: normal;
