--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -15,7 +15,7 @@
    
 }
 
-.logo-conteiner {
+.logo-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,7 +39,7 @@
     transform: scale(1.3);
 }
 
-.cover-conteiner {
+.cover-container {
     background-image: linear-gradient(90deg, rgba(29,29,27,1) 0%, rgba(29,29,27,0.335171568627451) 30%, rgba(29,29,27,0.1110819327731093) 45%, rgba(29,29,27,0) 60%, rgba(29,29,27,0) 100%),
     url('/assets/img/fundo-cover.jpeg');
     background-position: center;
