--- a/assets/css/event.css
+++ b/assets/css/event.css
@@ -7,7 +7,7 @@
     position: relative;
 }
 
-.event-conteiner {
+.event-container {
     padding: 1vw 5vw 0 5vw;
     width: 80%;
 
@@ -24,7 +24,7 @@
 }
 
 
-.event-conteiner div > img {
+.event-container div > img {
     width: 100%;
     object-fit: fill;
     border-radius: 20px;
