--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -10,6 +10,7 @@ html {
     scroll-snap-type: y proximity;
     font-family: var(--font-title);
     font-weight: normal;
+    max-width: 100vw;
 }
 
 
