--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -12,6 +12,7 @@
 
     z-index: 1000;
 
+    box-shadow: 0px 1px 20px var(--color-white);
    
 }
 
@@ -84,3 +85,43 @@
     font-weight: 400;
     width: auto;
 }
+
+
+footer {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 1vw 3vw;
+
+    font-size: clamp(1rem, 1.5vw, 5rem);
+
+    width: 100vw;
+}
+
+.creators {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+
+    margin-top: 20px;
+}
+
+
+
+.creators a {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem 30px;
+    font-weight: 600;
+
+}
+
+.creators a:hover {
+    transform: scale(1.2);
+    cursor: pointer;   
+}
+
