--- a/assets/css/host-laws.css
+++ b/assets/css/host-laws.css
@@ -1,23 +1,5 @@
-.host-details {
-    display: none;
-    flex-direction: column;
-
-    margin-top: 2vw;
-    width: 50vw;
-    max-height: 70vh;
-    
-    position: absolute;
-    z-index: 20000;
-    border: 1px solid red;
-    border-radius: 20px;
-
-    overflow: hidden;
-
-
-}
-
 .host {
-    padding-top: 10rem;
+    padding-top: 0;
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
@@ -50,7 +32,7 @@
     display: flex;
     flex-flow: row wrap;
     width: 80%;
-    gap: 2rem;
+    gap: 2vw;
 }
 
 
@@ -66,6 +48,15 @@
     border-radius: 50%;
     overflow: hidden;
     display: flex;
+
+    box-shadow: 10px 2px 10px var(--color-blue);
+    overflow: hidden;
+    
+}
+
+.host-preview-img:hover {
+    cursor: pointer;
+    transform: translate(-10px, 0);
     
 }
 
@@ -77,6 +68,82 @@
 .host-preview-img img:hover {
     cursor: pointer;
 }
+
+/* Tela de detalhes das host */
+
+.host-details-container {
+    padding-top: 5vw;
+    position: absolute;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(2, 2, 2, 0.8) ;
+}
+
+
+.host-details {
+    display: flex;
+    flex-direction: column;
+
+    width: 50vw;
+    min-height: 60vh;
+    max-height: 75vh;
+    
+    position: absolute;
+    z-index: 20000;
+    border-radius: 20px;
+
+    background-color: white;
+    border: 2px solid black;
+
+    overflow: hidden;
+}
+
+.host-img {
+    object-fit: cover;
+
+    width: 100%;
+    height: 50vh;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+
+}
+
+.host-details div {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: start;
+}
+
+
+.host-info-container {
+    flex: 1 5 20rem;
+    padding: 1vw 2vw;
+    color: gray;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 70%;
+    font-size: clamp(.9rem, .9vw, 3rem);
+}
+
+.host-info-container h3{
+    color: var(--color-blue);
+    font-size: clamp(2rem, 2vw, 3rem);
+}
+
+.host-maps {
+    display: block;
+    flex: 1 1 10rem;
+    height: 100%;
+    aspect-ratio: 4/3;
+}
+
+
+
+
 
 
 /* laws */
@@ -94,7 +161,7 @@
 }
 
 .laws h3 {
-    border: 1px solid red;
     color: white;
     font-size: clamp(2rem, 3vw, 6rem);
 }
+
