--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
 
-    padding: 5vw;   
+    padding: 6vw 2vw;   
     position: relative;
 
    
@@ -17,6 +17,7 @@
     text-align: center;
 
     font-size: clamp(2rem, 3vw, 5rem);
+    font-weight: 100;
     color: var(--color-blue);
 
 }
@@ -39,12 +40,13 @@
 
 .gallery-details-container {
     position: absolute;
+    z-index: 0;
     display: none;
     justify-content: center;
     align-items: center;
     
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     background-color: rgba(2, 2, 2, 0.8) ;
 }
 
@@ -64,7 +66,7 @@
     overflow: hidden;
 
     background-color: white;
-    border: 2px solid black;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, .25)
 
 }
 
@@ -118,39 +120,36 @@
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
-    gap: 2vw;
+    gap: 1vw;
     
     width: 100%;
     padding: 20px;
+
    
 }
 
 .gallery-field {
     height: 100%;
-    aspect-ratio: 4/3;
 }
 
 
 .gallery-img {
-    flex: 1 3 10vw;
+    flex: 1 0 5vw;
     display: flex;
     justify-content: center;
     align-items: center;
 
-    width: 20vw;
-    min-width: 250px;
+    max-width: 20vw;
+    min-width: 100px;
 
 
     object-fit: cover;
-    border-radius: 20px;
-    border: 2px solid black;
-    box-shadow: 10px 10px 10px var(--color-blue);
+    box-shadow: 10px 10px 25px rgba(0, 0, 0, .25);
     overflow: hidden;
 }
 
 .gallery-img:hover {
     cursor: pointer;
-    box-shadow: 10px 10px 10px black;
 }
 
 
