--- a/assets/css/host-laws.css
+++ b/assets/css/host-laws.css
@@ -1,11 +1,11 @@
 .host {
-    padding-top: 0;
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
     align-items: center;
     font-size: 1.5rem;
     gap: 5rem;
+    color: var(--color-gray);
 }
 
 .host h4, h3 {
@@ -31,34 +31,45 @@
 .host-container {
     display: flex;
     flex-flow: row wrap;
-    width: 80%;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 50px;
+    width: 100%;
     gap: 2vw;
+    
 }
 
 
+#host-container h3 {
+    font-size: clamp(3rem, 4vw, 9rem);
+
+}
+
 .host-preview {
+    flex: 1 0 50px;
     display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
     align-items: center;
+    text-align: left;
     gap: 20px;
+
 }
 
 .host-preview-img {
-    width: 10vw;
-    height: 10vw;
+    width: 20vh;
+    height: 20vh;
     border-radius: 50%;
     overflow: hidden;
     display: flex;
+    
 
-    box-shadow: 10px 2px 10px var(--color-blue);
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, .25);
     overflow: hidden;
     
 }
 
-.host-preview-img:hover {
-    cursor: pointer;
-    transform: translate(-10px, 0);
-    
-}
+
 
 .host-preview-img img {
     object-fit: cover;
@@ -73,10 +84,14 @@
 
 .host-details-container {
     padding-top: 5vw;
+
     position: absolute;
+    z-index: 0;
+
     display: none;
     justify-content: center;
     align-items: center;
+
     width: 100vw;
     height: 100vh;
     background-color: rgba(2, 2, 2, 0.8) ;
@@ -85,9 +100,9 @@
 
 .host-details {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 
-    width: 50vw;
+    width: 80vw;
     min-height: 60vh;
     max-height: 75vh;
     
@@ -96,7 +111,7 @@
     border-radius: 20px;
 
     background-color: white;
-    border: 2px solid black;
+    box-shadow: 10px 10px 50px rgba(0, 0, 0, .5);
 
     overflow: hidden;
 }
@@ -104,12 +119,11 @@
 .host-img {
     object-fit: cover;
 
-    width: 100%;
-    height: 50vh;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+    width: 60%;
+    
 
 }
+
 
 .host-details div {
     display: flex;
@@ -124,9 +138,31 @@
     color: gray;
     display: flex;
     flex-direction: column;
-    height: 100%;
     width: 70%;
+    height: 60%;
+
     font-size: clamp(.9rem, .9vw, 3rem);
+
+    gap: 20px;
+}
+
+
+
+.host-info-sociais {
+    gap: 20px;
+    width: 100%;
+}
+
+.host-info-sociais a, .host-info-sociais a:visited  {
+    color: black;
+    display: inline;
+
+}
+
+.host-info-sociais i:hover {
+    transform: scale(1.3);
+    color: black;
+
 }
 
 .host-info-container h3{
