--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -8,9 +8,11 @@
     justify-content: space-between;
     align-items: center;
     position: fixed;
+    top: 0;
+
     background-color: var(--color-blue);
 
-    z-index: 1000;
+    z-index: 5;
 
    
 }
@@ -23,7 +25,7 @@
 }
 
 .logo {
-    width: 13vw;
+    width: 10vw;
     min-width: 10rem;
     object-fit: cover;
 }
@@ -72,7 +74,7 @@
 
 .cover-text h1 {
     font-size: clamp(3rem, 4vw, 4rem);
-    color: var(--color-blue);
+    color: var(--color-yellow);
     font-weight: normal;
 
 
@@ -90,32 +92,37 @@ footer {
     flex-flow: row wrap;
     justify-content: flex-end;
     align-items: center;
-    padding: 1vw 3vw;
 
     font-size: clamp(1rem, 1.5vw, 5rem);
 
-    width: 100vw;
 }
 
 .creators {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
-    gap: 20px;
 
-    margin-top: 20px;
+    width: 100vw;
+    gap: 20px;
+    padding: 15px 15px;
+
+
+
+
 }
 
+#icon-footer1, #icon-footer2, #icon-footer3 {
 
-
-.creators a {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 2rem 30px;
+    
+    height: 100%;
+    gap: 1rem 30px;
+   
     font-weight: 600;
-
+    font-size: 2rem;
 }
 
 .creators a:hover {
