--- a/assets/css/event.css
+++ b/assets/css/event.css
@@ -74,12 +74,12 @@
 .event-text i:hover {
     transform: scale(1.3);
     cursor: pointer;
-    text-shadow: 10px 2px 5px var(--color-blue);
+    text-shadow: 5px 2px 10px var(--color-black);
 
 }
 
 #fa-arrow-left:hover {
-    text-shadow: -10px 2px 5px var(--color-blue);
+    text-shadow: -5px 2px 10px var(--color-black);
 }
 
 .event-slide-ball {
