--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
 
-    padding: 6vw 2vw;   
+    padding: 2vw 2vw;   
     position: relative;
 
    
@@ -38,63 +38,78 @@
     
 }
 
+
 .gallery-details-container {
     position: absolute;
-    z-index: 0;
+   
     display: none;
     justify-content: center;
     align-items: center;
     
+    padding-top: 0;
+    z-index: 10;
+    overflow: visible;
     width: 100vw;
-    height: 100%;
+    height: 500vh;
     background-color: rgba(2, 2, 2, 0.8) ;
+
+  
+
 }
+
 
 .gallery-details {
     display: none;
     flex-direction: column;
-
-    margin-top: 5vw;
-    width: 50vw;
-    min-height: 60vh;
-    max-height: 75vh;
     
+    z-index: 10;
+    margin-top: 5vw;
+    
+    max-width: 60vw;
+    min-height: 60vh;
+    max-height: 85vh;
+    
+   /* aspect-ratio: 2/2;*/
     position: absolute;
-    z-index: 20000;
+   
     border-radius: 20px;
 
     overflow: hidden;
 
     background-color: white;
-    box-shadow: 10px 10px 20px rgba(0, 0, 0, .25)
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, .25);
+  
+ 
 
-}
-
-.gallery-details div {
-    display: flex;
-    flex-flow: row wrap;
-    align-items: start;
 }
 
 
 .details-img {
     width: 100%;
-    height: 50vh;
+    max-height: 50vh;
 
     object-fit: cover;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
+    
 }
 
+.details-info-container-container {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+
 .details-info-container {
-    flex: 1 5 20rem;
+    flex: 1 1 200px;
+    
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
 
     padding: 1vw 2vw;
     height: 100%;
-    width: 70%;
-
+    
     font-size: clamp(.9rem, .9vw, 3rem);
     color: gray;
 }
@@ -105,10 +120,18 @@
 }
 
 .details-maps {
-    display: block;
-    flex: 1 1 10rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    flex: 1 1 200px;
+    min-width: 300px;
+ /*
+ 
     height: 100%;
-    aspect-ratio: 4/3;
+ 
+  */
     
 }
 
@@ -116,14 +139,17 @@
 
 
 .gallery-container {
-    display: flex;
-    flex-flow: row wrap;
+    gap: 5px;
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 30vw));
+    
     justify-content: center;
     align-items: center;
-    gap: 1vw;
-    
+ 
+    grid-gap: 5px; 
     width: 100%;
-    padding: 20px;
+    padding: 20px 5px;
 
    
 }
@@ -134,18 +160,18 @@
 
 
 .gallery-img {
-    flex: 1 0 5vw;
+    flex: 1 0 10vw;
     display: flex;
     justify-content: center;
     align-items: center;
 
-    max-width: 20vw;
-    min-width: 100px;
+    width: 100%;
 
 
     object-fit: cover;
-    box-shadow: 10px 10px 25px rgba(0, 0, 0, .25);
+    box-shadow: 10px 10px 25px rgba(0, 0, 0, .1);
     overflow: hidden;
+    transition: all ease-in-out .1s;
 }
 
 .gallery-img:hover {
@@ -156,7 +182,11 @@
 .gallery-img img {
     width: 100%;
     object-fit: cover;
+   
     aspect-ratio: 4/3;
+
+
+    
 
 }
 
