--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -12,10 +12,12 @@ html {
     max-width: 100vw;
     overflow-x: hidden;
     background-color: white;
+    animation: all 3s ease-in-out;
 }
 
 
 a, a:visited, a:active {
     text-decoration: none;
+    color: #274380;
 }
 
