--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,4 +1,4 @@
-@media (max-width: 400px){
+@media (max-width: 550px){
 
     :hover {
         transform: unset;
@@ -12,10 +12,11 @@
 
     /* BARRA AZUL */
 
-    .nav-bar {
+    #nav-bar {
         padding: 3vw 3vw;
         padding-right: 5vw;
         gap: 0px;
+        z-index: 5;
        
 
     }
@@ -153,9 +154,10 @@
 
     .details-maps, .host-maps {
 
-        height: 200px;
+        max-height: 150px;
         width: 50%;
         max-width: 100%;
+
       
         
     }
