--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -106,9 +106,6 @@ footer {
     gap: 20px;
     padding: 15px 15px;
 
-
-
-
 }
 
 #icon-footer1, #icon-footer2, #icon-footer3 {
@@ -118,11 +115,23 @@ footer {
     justify-content: center;
     align-items: center;
     
-    height: 100%;
     gap: 1rem 30px;
-   
-    font-weight: 600;
-    font-size: 2rem;
+}
+
+.creators span {
+    padding: 0;
+    letter-spacing: 1px;
+}
+
+.creators a {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+       
+    font-weight: 800;
+    font-size: 16px;
 }
 
 .creators a:hover {
